Se termina el ejercicio de texto